--- a/docker/.env.example
+++ b/docker/.env.example
@@ -421,6 +421,7 @@ SMTP_OPPORTUNISTIC_TLS=false
 # ------------------------------
 
 # Maximum length of segmentation tokens for indexing
+DISABLE_MARKDOWN_REFINING=false
 INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH=1000
 
 # Member invitation link valid time (hours),
