disable markdown refining

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -433,6 +433,9 @@ SMTP_OPPORTUNISTIC_TLS=false
 # Others Configuration
 # ------------------------------
 
+#Disable Markdown refining
+DISABLE_MARKDOWN_REFINING=false
+
 # Maximum length of segmentation tokens for indexing
 INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH=1000
 
