--- a/api/.env.example
+++ b/api/.env.example
@@ -246,6 +246,7 @@ HTTP_REQUEST_NODE_MAX_TEXT_SIZE=1048576 # 1MB
 LOG_FILE=
 
 # Indexing configuration
+DISABLE_MARKDOWN_REFINING=false
 INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH=1000
 
 # Workflow runtime configuration
