--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -39,6 +39,7 @@ ENV DEPLOY_ENV=PRODUCTION
 ENV CONSOLE_API_URL=http://127.0.0.1:5001
 ENV APP_API_URL=http://127.0.0.1:5001
 ENV PORT=3000
+ENV HOST=0.0.0.0
 
 # set timezone
 ENV TZ=UTC
